--- a/app/views/quick_order/sku_populate_cart.html.erb
+++ b/app/views/quick_order/sku_populate_cart.html.erb
@@ -1,3 +1,9 @@
 sku_populate_cart.html.erb
 
 <%= debug(params[:quickcartrows]) %>
+
+<%= debug(@bulk_order.has_error_messages?) %>
+
+<%= debug(@bulk_order.error_messages) %>
+
+<%= debug(@bulk_order.bulk_order) %>
