--- a/app/views/quick_order/_form.html.erb
+++ b/app/views/quick_order/_form.html.erb
@@ -2,12 +2,12 @@
 <% fid = fid.nil? ? '' : fid %>
 <% fclass = fclass.nil? ? 'spree_quick_order_fieldset' : fclass %>
 
-<%= form_tag(sku_populate_cart_path, :method=>'post') do |f| %>
-<fieldset id="<%= fid %>" class="<%= fclass %>">
-<span class="spree_quick_order_qty">Qty</span><span class="spree_quick_order_sku">SKU</span>
+<%= form_tag( sku_populate_cart_path, :method=>'post', :class=>fclass, :id=>fid ) do |f| %>
+<fieldset>
+<span class="spree_quick_order_sku">SKU</span><span class="spree_quick_order_qty">Qty</span>
   <% rows.times do |i| %>
-	  <p><%= number_field_tag ("quickcartrows[#{i}][quantity]"), 1, :class => 'title', :size => 3 %>
-	  <%= text_field_tag ("quickcartrows[#{i}][sku]"), "", :class => 'title', :size => 15 %></p>
+	  <p><%= text_field_tag ("quickcartrows[#{i}][sku]"), "", :class => 'title', :size => 15 %>
+	  <%= number_field_tag ("quickcartrows[#{i}][quantity]"), 1, :class => 'title', :size => 3 %></p>
   <% end %>
   <%= button_tag :class => 'small primary', :id => 'add-to-cart-button' do %>
     <%= image_tag('icons/add-to-cart.png') + t(:add_to_cart) %>
