updated readme with some examples

--- a/app/views/quick_order/index.html.erb
+++ b/app/views/quick_order/index.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <h1><%= t(:quick_order_form) %></h1>
 
-<%= quick_order_form(2) %>
+<%= quick_order_form(5) %>
 
-<%= render 'form' %>
+<%# render 'form' %>
 
