--- a/app/views/quick_order/_form.html.erb
+++ b/app/views/quick_order/_form.html.erb
@@ -6,8 +6,8 @@
 <fieldset>
 <span class="spree_quick_order_sku">SKU</span><span class="spree_quick_order_qty">Qty</span>
   <% rows.times do |i| %>
-	  <p><%= text_field_tag ("quickcartrows[#{i}][sku]"), "", :class => 'title', :size => 15, :min => 1 %>
-	  <%= number_field_tag ("quickcartrows[#{i}][quantity]"), 1, :class => 'title', :size => 3, :min => 1 %></p>
+	  <p><%= text_field_tag ("quickcartrows[#{i}][sku]"), "", :class => 'spos_sku', :size => 15, :min => 1 %>
+	  <%= number_field_tag ("quickcartrows[#{i}][quantity]"), 1, :class => 'spos_qty', :size => 3, :min => 1 %></p>
   <% end %>
   <%= button_tag :class => 'small primary', :id => 'add-to-cart-button' do %>
     <%= image_tag('icons/add-to-cart.png') + t(:add_to_cart) %>
